--- a/EmployeeManagement_V2/EmployeeManagement_V2.vcxproj.filters
+++ b/EmployeeManagement_V2/EmployeeManagement_V2.vcxproj.filters
@@ -39,5 +39,11 @@
     <ClCompile Include="DynamicArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AbstractSe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AbstractHe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
